--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "agentcrew-ai"
-version = "0.6.4-3"
+version = "0.6.5"
 requires-python = ">=3.12"
 classifiers = [
     "Programming Language :: Python :: 3",
